# click

./: test_structured_log_manual.py
examples/advanced_validation/: README  advanced_validation.py  pyproject.toml
examples/completion-generator/: README  click_complete.py  compgen.py  pyproject.toml
examples/scripts/: structured_log_example.py
src/click/: __init__.py  core.py  shell_completion.py  structured_log.py  types.py
tests/: test_shell_completion.py  test_structured_log.py  test_validation.py
