[project]
name = "click-example-advanced-validation"
version = "1.0.0"
description = "Click advanced validation example"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3",
]

[project.scripts]
advanced-validation = "advanced_validation:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "advanced_validation"
